# a-scanner

./: .gitignore  Cargo.toml  README.md  build-mobile.sh  build.sh  deploy-mobile.sh  deploy.sh  implementation_roadmap.md  install.sh  run-backend.sh  run-frontend.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build-android.yml  build-web.yml
backend/: .gitignore  Cargo.toml
backend/migrations/: 20260226000000_initial.sql  20260226000001_extended_scan.sql  20260226000004_provider_response_format.sql  20260226000007_auth.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: auth.rs  mod.rs  providers.rs  results.rs  scans.rs  static_files.rs  ws.rs
backend/src/scanner/: mod.rs  orchestrator.rs  provider.rs
backend/src/services/: auth_service.rs  mod.rs  provider_service.rs  result_service.rs  scan_service.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  facade.rs  lib.rs
crates/core/src/db/: mod.rs
crates/core/src/models/: mod.rs
crates/core/src/scanner/: mod.rs  orchestrator.rs  provider.rs
crates/core/src/services/: auth_service.rs  provider_service.rs  result_service.rs  scan_service.rs
crates/mobile-backend/: Cargo.toml
crates/mobile-backend/src/: lib.rs
crates/web-backend/: Cargo.toml
crates/web-backend/src/: error.rs  lib.rs  main.rs
crates/web-backend/src/routes/: auth.rs  mod.rs  providers.rs  results.rs  scans.rs  static_files.rs  ws.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: client.ts  index.ts
frontend/src/components/: ChangePasswordDialog.tsx  Layout.tsx
frontend/src/hooks/: useScanProgress.ts
frontend/src/pages/: IpDetailPage.tsx  LoginPage.tsx  ProvidersPage.tsx  ResultsPage.tsx  ScanDetailPage.tsx  ScansPage.tsx
frontend/src/stores/: authStore.ts  providerStore.ts  resultStore.ts  scanPreferencesStore.ts  scanStore.ts
frontend/src/types/: index.ts
migrations/: 20260226000002_provider_ranges.sql  20260226000003_providers_table.sql  20260226000005_packet_loss.sql  20260226000006_working_ips.sql
mobile/: app.json  package-lock.json  package.json  react-native.config.js
mobile/android/: gradle.properties  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/ascanner/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/java/com/ascanner/bridge/: ScannerBridge.kt
mobile/android/app/src/main/java/com/ascanner/modules/: ScannerModule.kt  ScannerPackage.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/src/: App.tsx  theme.ts
mobile/src/components/: ChangePasswordDialog.tsx
mobile/src/hooks/: useScanProgress.ts
mobile/src/native/: ScannerBridge.ts
mobile/src/screens/: IpDetailScreen.tsx  LoginScreen.tsx  ProvidersScreen.tsx  ResultsScreen.tsx  ScanDetailScreen.tsx  ScansScreen.tsx
mobile/src/stores/: appStore.ts  authStore.ts  providerStore.ts  resultStore.ts  scanPreferencesStore.ts  scanStore.ts
mobile/src/types/: index.ts
