[package]
name = "a-scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "a_scanner_backend"
path = "src/lib.rs"

[[bin]]
name = "a-scanner"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embedded frontend assets
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Networking / scanning
ipnet = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
futures = "0.3"
rlimit = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[dev-dependencies]
axum-test = "16"
