[package]
name = "a-scanner-core"
version.workspace = true
edition.workspace = true

[lib]
name = "a_scanner_core"
path = "src/lib.rs"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Networking / scanning
ipnet = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
futures = "0.3"
rlimit = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
