[package]
name = "a-scanner-mobile"
version.workspace = true
edition.workspace = true

[lib]
name = "mobile_backend"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Core library (with bundled SQLite for Android)
a-scanner-core = { path = "../core", features = ["bundled-sqlite"] }

# JNI interop
jni = "0.21"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Static globals
once_cell = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File descriptor limits
rlimit = "0.10"
