[package]
name = "a-scanner-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "a-scanner"
path = "src/main.rs"

[dependencies]
# Core library
a-scanner-core = { path = "../core" }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embedded frontend assets
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Re-export needed for direct DB/TLS access in AppState
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Needed for Arc<TlsConnector> in AppState
tokio-rustls = "0.26"

# Needed for rustls crypto provider setup
rustls = "0.23"

# Anyhow for main error handling
anyhow = "1"

[dev-dependencies]
axum-test = "16"
